--- a/Blloco-06-HTM-Forms-Flexbox-Responsivo/03-introducao-CSS-flexboox/estudo/style.css
+++ b/Blloco-06-HTM-Forms-Flexbox-Responsivo/03-introducao-CSS-flexboox/estudo/style.css
@@ -30,6 +30,15 @@
   width : 100px;
   height : 100px;
 }
+* {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  box-sizing: border-box;
+  font-family: 'Ubuntu';
+}
+
 
 /* flex-direction
 flex-wrap
