lista com react map

--- a/11 - bloco  - Introdução ao React/2 - introdução - React/myapp/dia2/src/App.css
+++ b/11 - bloco  - Introdução ao React/2 - introdução - React/myapp/dia2/src/App.css
@@ -1,11 +1,18 @@
 .App {
   text-align: center;
+
 }
 h1 {
   text-align: center;
 }
 
-button{
+body {
+  margin-left: 20px;
+}
+
+button, input{
+  padding: 10px;
+  margin-bottom: 10px;
   display: flex;
   margin: auto;
 }
