--- a/16 - bloco Gerenciamento de de estado com Redux/02 - usando o Redux no React/reduxEasy/redux-easy/src/App.css
+++ b/16 - bloco Gerenciamento de de estado com Redux/02 - usando o Redux no React/reduxEasy/redux-easy/src/App.css
@@ -24,9 +24,23 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+input{
+  padding:10px 20px;
+
 }
+
+button{
+  margin-left: 20px;
+  padding: 10px 20px;
+}
+
+button:hover{
+  color: rgb(24, 226, 6);
+  background-color:rgb(0, 0, 0);
+  font-size: 16px;
+  border-radius: 10px;
+}
+
 
 @keyframes App-logo-spin {
   from {
