--- a/16 - bloco Gerenciamento de de estado com Redux/02 - usando o Redux no React/3/sd-10b-live-lectures-lecture-16.2/trybeflix/src/index.css
+++ b/16 - bloco Gerenciamento de de estado com Redux/02 - usando o Redux no React/3/sd-10b-live-lectures-lecture-16.2/trybeflix/src/index.css
@@ -17,7 +17,7 @@ code {
 main {
   display: flex;
   justify-content: space-between;
-  padding: 30px;
+  padding: 20px 30px;
 }
 
 .Header {
@@ -34,8 +34,8 @@ main {
 }
 
 .button{
-  background-color: rgb(190, 196, 115);
-  color: rgb(37, 32, 32);
+  background-color: rgb(92, 41, 37);
+  color: rgb(235, 206, 206);
   border: none;
   border-radius:50px;
   margin-left: 10px;
