--- a/30 -  Sockets/02 - Sockets - TCP_UDP & NET/um/public/styles.css
+++ b/30 -  Sockets/02 - Sockets - TCP_UDP & NET/um/public/styles.css
@@ -28,7 +28,9 @@ button {
   width: 600px;
   height: 50px;
   font-size: 14px;
-  background: #069;
+  /* background: #069; */
+  background-color: #FBAB7E;
+  background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
   text-align: center;
   line-height: 50px;
   font-weight: bold;
@@ -75,7 +77,7 @@ button {
   width: 60vw;
   height: 5vw;
   font-size: 1.5vw;
-  background: #069;
+  /* background: #069; */
   text-align: center;
   line-height: 5vw;
   font-weight: bold;
@@ -123,7 +125,7 @@ button {
   width: 60vw;
   height: 5vw;
   font-size: 1.5vw;
-  background: #069;
+  /* background: #069; */
   text-align: center;
   line-height: 5vw;
   font-weight: bold;
