--- a/30 -  Sockets/02 - Sockets - TCP_UDP & NET/um/public/styles.css
+++ b/30 -  Sockets/02 - Sockets - TCP_UDP & NET/um/public/styles.css
@@ -29,8 +29,8 @@ button {
   height: 50px;
   font-size: 14px;
   /* background: #069; */
-  background-color: #FBAB7E;
-  background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+  background-color: #FF3CAC;
+  background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
   text-align: center;
   line-height: 50px;
   font-weight: bold;
@@ -48,12 +48,6 @@ button {
 
 html, body {
   height: 100%;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 
 #chat {
@@ -96,12 +90,6 @@ button {
 
 html, body {
   height: 100%;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 
 #chat {
